Fixed bug with field textarea not wrapping text

--- a/scss/core/components/_field.scss
+++ b/scss/core/components/_field.scss
@@ -66,6 +66,8 @@
 	}
 
 	@include sl-extend-tags(textarea) {
+		overflow: auto;
+		white-space: normal;
 
 		@include sl-textbox(
 			$font-size,
